fix: resolve tooltip issue in tech list
Adjusted the stacking context of the technology list items to ensure tooltips appear above adjacent elements during hover.

--- a/src/app/technology/styles/TechnologyModal.module.scss
+++ b/src/app/technology/styles/TechnologyModal.module.scss
@@ -173,7 +173,6 @@
               display: flex;
               flex-wrap: wrap;
               gap: 20px;
-              overflow-x: hidden;
               @media (max-width: 425px) {
                 overflow-y: scroll;
                 height: 300px;
